Perbaikan UI dan Masukkan string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,60 @@
 <resources>
     <string name="app_name">LifeAI</string>
+    <string name="usia">Usia</string>
+    <string name="jenis_kelamin">Jenis Kelamin</string>
+    <string name="laki_laki">Laki-laki</string>
+    <string name="perempuan">Perempuan</string>
+    <string name="tinggi_badan_cm">Tinggi Badan (cm)</string>
+    <string name="masukkan_tinggi_badan_dalam_cm">Masukkan tinggi badan dalam cm</string>
+    <string name="berat_badan_kg">Berat Badan (kg)</string>
+    <string name="masukkan_berat_badan_dalam_kg">Masukkan berat badan dalam kg</string>
+    <string name="hitung">Hitung</string>
+    <string name="hasil_bmi">Hasil BMI:</string>
+    <string name="klasifikasi_bmi">Klasifikasi BMI:</string>
+    <string name="seberapa_sering_anda_merasa_kelelahan">Seberapa sering Anda merasa kelelahan?</string>
+    <string name="masukkan_pesan_anda">Masukkan pesan Anda</string>
+    <string name="prediksi_penyakit_fisik">Prediksi Penyakit Fisik</string>
+    <string name="seberapa_parah_nyeri_yang_anda_rasakan">Seberapa parah nyeri yang Anda rasakan?</string>
+    <string name="seberapa_sering_anda_merasa_mual">Seberapa sering Anda merasa mual?</string>
+    <string name="seberapa_sering_anda_merasa_sesak_napas">Seberapa sering Anda merasa sesak napas?</string>
+    <string name="seberapa_sering_anda_merasa_pusing">Seberapa sering Anda merasa pusing?</string>
+    <string name="seberapa_besar_kehilangan_nafsu_makan_yang_anda_alami">Seberapa besar kehilangan nafsu makan yang Anda alami?</string>
+    <string name="seberapa_lemah_anda_merasa">Seberapa lemah Anda merasa?</string>
+    <string name="kirim">Kirim</string>
+    <string name="hasil_algoritma">Hasil Algoritma</string>
+    <string name="login">Login</string>
+    <string name="masukkan_password_anda">Masukkan Password Anda</string>
+    <string name="masukkan_email_anda">Masukkan Email Anda</string>
+    <string name="belum_punya_akun_daftar">Belum Punya Akun? Daftar</string>
+    <string name="lifeai">LifeAI</string>
+    <string name="daftar">Daftar</string>
+    <string name="sudah_punya_akun_masuk">Sudah Punya Akun? Masuk</string>
+    <string name="masukkan_username_anda">Masukkan Username Anda</string>
+    <string name="jelaskan_aktivitas_keseharianmu">Jelaskan Aktivitas Keseharianmu</string>
+    <string name="kalkulator_umur">Kalkulator Umur</string>
+    <string name="tanggal_lahir">Tanggal Lahir*</string>
+    <string name="bulan">Bulan</string>
+    <string name="hari">Hari</string>
+    <string name="tahun">Tahun</string>
+    <string name="apakah_anda_merokok">Apakah Anda Merokok?</string>
+    <string name="bmi">BMI</string>
+    <string name="outlook">Outlook</string>
+    <string name="konsumsi_alkohol">Konsumsi Alkohol?</string>
+    <string name="negara">Negara</string>
+    <string name="level_kebugaran">Level Kebugaran</string>
+    <string name="tingkat_diet">Tingkat Diet</string>
+    <string name="seberapa_besar_penurunan_minat_anda_pada_aktivitas_yang_biasanya_disukai">Seberapa besar penurunan minat Anda pada aktivitas yang biasanya disukai?</string>
+    <string name="seberapa_sering_anda_menghindari_interaksi_sosial">Seberapa sering Anda menghindari interaksi sosial?</string>
+    <string name="seberapa_sering_anda_mengalami_gangguan_tidur">Seberapa sering Anda mengalami gangguan tidur?</string>
+    <string name="seberapa_sering_anda_merasa_kelelahan_berlebih">Seberapa sering Anda merasa kelelahan berlebih?</string>
+    <string name="seberapa_sering_anda_kesulitan_berkonsentrasi_atau_fokus">Seberapa sering Anda kesulitan berkonsentrasi atau fokus?</string>
+    <string name="seberapa_sering_anda_merasa_takut_pada_situasi_tanpa_alasan_jelas">Seberapa sering Anda merasa takut pada situasi tanpa alasan jelas?</string>
+    <string name="seberapa_sering_anda_memiliki_pola_berpikir_negatif_tentang_diri_sendiri">Seberapa sering Anda memiliki pola berpikir negatif tentang diri sendiri?</string>
+    <string name="seberapa_besar_perasaan_ini_mengganggu_aktivitas_harian_anda">Seberapa besar perasaan ini mengganggu aktivitas harian Anda?</string>
+    <string name="seberapa_sering_anda_merasakan_perasaan_negatif">Seberapa sering Anda merasakan perasaan negatif?</string>
+    <string name="seberapa_lama_perasaan_ini_berlangsung">Seberapa lama perasaan ini berlangsung?</string>
+    <string name="seberapa_intens_perasaan_negatif_yang_anda_rasakan">Seberapa intens perasaan negatif yang Anda rasakan?</string>
+    <string name="prediksi_penyakit_mental">Prediksi Penyakit Mental</string>
 
     <string-array name="sex_options">
         <item>Male</item>
